[tool.poetry]
name = "hutang-recorder"
version = "0.1.0"
description = ""
authors = ["Firdaus Hakimi <hakimifirdaus944@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
